chore: end of day 2 commit

--- a/src/translations/ro_RO.json
+++ b/src/translations/ro_RO.json
@@ -1,4 +1,6 @@
 {
+  "Home": "Acasa",
+  "Add": "Adauga",
   "Movies App": "Feel free to change this!",
   "Your Comment": "Comentariul Tau",
   "Add Comment": "Adauga Comentariu",
